--- a/sadmin/css/export.css
+++ b/sadmin/css/export.css
@@ -1266,7 +1266,7 @@ margin: 10px;
     clear: right;
 width: 100%;
     height: 200px;
-    border: 1px solid grey;
+/*    border: 1px solid grey;*/
 
 }
 
